Small color change to fix contrast issue

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,6 +1,6 @@
 :root {
     --primary-color: #003c66;
-    --secondary-color: #9d5c63;
+    --secondary-color: #7d3c43;
     --accent-color1: #ffa90a;
     /* to be used accent-color2: #f82222; */
     --accent-color3: #e6dfdb;
